--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,8 @@ candle-onnx = { path = "./candle-onnx", version = "0.4.2" }
 candle-transformers = { path = "./candle-transformers", version = "0.4.2" }
 clap = { version = "4.2.4", features = ["derive"] }
 criterion = { version = "0.5.1", default-features=false }
-cudarc = { version = "0.10.0", features = ["f16"] }
+# cudarc = { version = "0.10.0", features = ["f16"] }
+cudarc = { path = "../cudarc" }
 fancy-regex = "0.13.0"
 gemm = { version = "0.17.0", features = ["wasm-simd128-enable"] }
 hf-hub = "0.3.0"
