--- a/candle-core/Cargo.toml
+++ b/candle-core/Cargo.toml
@@ -18,7 +18,7 @@ metal = { workspace = true, optional = true}
 cudarc = { workspace = true, optional = true }
 gemm = { workspace = true }
 half = { workspace = true }
-# intel-mkl-src = { workspace = true, optional = true }
+intel-mkl-src = { workspace = true, optional = true }
 libc = { workspace = true, optional = true }
 memmap2 = { workspace = true }
 num-traits = { workspace = true }
@@ -41,8 +41,7 @@ criterion = { workspace = true }
 default = []
 cuda = ["cudarc", "dep:candle-kernels"]
 cudnn = ["cuda", "cudarc/cudnn"]
-# mkl = ["dep:libc", "dep:intel-mkl-src"]
-mkl = ["dep:libc"]
+mkl = ["dep:libc", "dep:intel-mkl-src"]
 accelerate = ["dep:libc", "dep:accelerate-src"]
 metal = ["dep:metal", "dep:candle-metal-kernels"]
 
